# variant-lookup

./: .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  Dockerfile  LICENSE  README.md  compose.vv-override.yml  docker-compose.yml  nginx.conf  pyproject.toml
.github/workflows/: ci.yml
docker/mutalyzer-api/: Dockerfile  entrypoint.sh  wsgi.py
scripts/: setup.sh  zipmerge.py
src/variant_lookup/: __init__.py  api.py  auth.py  config.py  echtvar.py  health.py  logging_setup.py  main.py  manage_keys.py  models.py  mutalyzer_client.py  mutalyzer_populate.py  ncbi.py  normalize.py  pipeline.py  refseq.py  refseq_build.py  variantvalidator_client.py  versions.py
tests/: conftest.py  test_auth.py  test_echtvar.py  test_echtvar_endpoint.py  test_health.py  test_mutalyzer_client.py  test_mutalyzer_endpoint.py  test_ncbi.py  test_normalize.py  test_pipeline.py  test_refseq.py  test_refseq_build.py  test_request_id.py  test_smoke.py  test_v1_variant.py  test_v1_variants.py  test_variantvalidator_client.py  test_versions.py  test_vv_passthrough.py
